--- a/MVC5Course/Web.config
+++ b/MVC5Course/Web.config
@@ -22,6 +22,13 @@
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+
+
+    <authentication mode="Forms">
+      <forms loginUrl="客戶資料/LoginPage"
+        defaultUrl="客戶資料/LoginUser" />
+    </authentication>
+    
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -79,6 +86,7 @@
     </compilers>
   </system.codedom>
 
+   
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
